--- a/app/globals.css
+++ b/app/globals.css
@@ -122,3 +122,12 @@
   }
   
 }
+.cl-internal-l2l775{
+  display: none !important;
+}
+.cl-internal-y44tp9{
+  display: none !important;
+}
+.cl-internal-pe6vm4{
+  display: none !important;
+}
